fixed background path so it loads online

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url("/assets/images/html-color-codes-color-tutorials-hero-00e10b1f.jpg");
+    background: url("../../assets/images/html-color-codes-color-tutorials-hero-00e10b1f.jpg");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
 }
